--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
 </header>
 
-<!-- HERO 
+<!-- HERO -->
 <section id="hero" class="hero">
   <div class="container hero-inner">
     <div class="hero-image">
@@ -32,7 +32,7 @@
     </div>
   </div>
 </section>
--->
+
 <!-- SLIDER DE NOTICIAS -->
 <section class="slider" id="slider-container"></section>
 
@@ -64,4 +64,5 @@ document.getElementById('year').textContent = new Date().getFullYear();
 </script>
 </body>
 </html>
+
 
