--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <!-- HEADER -->
 <header class="site-header">
-  <div class="container header-inner" style="display:flex; justify-content:space-between; align-items:center;">
-    <div class="brand" style="display:flex; align-items:center; gap:12px;">
+  <div class="container header-inner">
+    <div class="brand">
       <img src="img/logo.png" alt="Logo IER Las Malvinas" id="logo">
       <div class="brand-text">
         <h1>IER Las Malvinas</h1>
@@ -32,9 +32,6 @@
     </div>
   </div>
 </section>
-
-<!-- SLIDER DE NOTICIAS -->
-<section class="slider" id="slider-container"></section>
 
 <!-- CONTENIDO PRINCIPAL -->
 <main class="container">
