--- a/index.html
+++ b/index.html
@@ -17,26 +17,15 @@
       <div class="brand-text">
         <h1>IER Las Malvinas</h1>
         <small>Formando estudiantes con valores y compromiso.</small>
+        <div class="mini-banner">
+          Bienvenidos a nuestra institución
+        </div>
       </div>
     </div>
     <nav id="site-nav" class="main-nav"></nav>
     <button id="btn-menu" class="hamburger" aria-label="menu">☰</button>
   </div>
 </header>
-
-<!-- HERO -->
-<section id="hero" class="hero">
-  <div class="container hero-inner">
-    <div class="hero-image">
-      <img src="img/portada.jpg" alt="Portada">
-    </div>
-  </div>
-</section>
-
-<!-- SLIDER DE NOTICIAS -->
-<section class="slider" id="slider-container">
-  <!-- Noticias destacadas se cargan dinámicamente -->
-</section>
 
 <!-- CONTENIDO PRINCIPAL -->
 <main class="container">
