--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <!-- HEADER -->
 <header class="site-header">
-  <div class="container header-inner">
-    <div class="brand">
-      <img src="img/logo.png" alt="Logo IER Las Malvinas" id="logo">
+  <div class="container header-inner" style="display:flex; justify-content:space-between; align-items:center;">
+    <div class="brand" style="display:flex; align-items:center; gap:12px;">
+      <img src="img/logo.png" alt="Logo IER Las Malvinas" id="logo" style="height:60px; border-radius:8px;">
       <div class="brand-text">
-        <h1>IER Las Malvinas</h1>
-        <small>Formando estudiantes con valores y compromiso.</small>
+        <h1 style="margin:0; font-size:1.3rem;">IER Las Malvinas</h1>
+        <small style="color:rgba(255,255,255,0.8);">Formando estudiantes con valores y compromiso.</small>
       </div>
     </div>
     <nav id="site-nav" class="main-nav"></nav>
@@ -24,15 +24,15 @@
   </div>
 </header>
 
-<!-- HERO / BANNER INICIO -->
+<!-- HERO -->
 <section id="hero" class="hero">
-  <div class="hero-inner">
-    <img src="img/portada.jpg" alt="Portada" class="hero-image">
-  </div>
+  <!-- La imagen de inicio se carga dinámicamente -->
 </section>
 
 <!-- SLIDER DE NOTICIAS -->
-<section class="slider" id="slider-container"></section>
+<section class="slider" id="slider-container">
+  <!-- Noticias destacadas se cargan dinámicamente -->
+</section>
 
 <!-- CONTENIDO PRINCIPAL -->
 <main class="container">
@@ -42,7 +42,7 @@
 <!-- FOOTER -->
 <footer class="site-footer">
   <div class="container">
-    <div class="footer-grid">
+    <div class="footer-grid" style="display:flex; justify-content:space-between; gap:12px; flex-wrap:wrap;">
       <div>
         <strong>IER Las Malvinas</strong>
         <p>Dirección • Teléfono • Correo</p>
