--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <!-- HEADER -->
 <header class="site-header">
-  <div class="container header-inner" style="display:flex; justify-content:space-between; align-items:center;">
-    <div class="brand" style="display:flex; align-items:center; gap:12px;">
-      <img src="img/logo.png" alt="Logo IER Las Malvinas" id="logo" style="height:60px; border-radius:8px;">
+  <div class="container header-inner">
+    <div class="brand">
+      <img src="img/logo.png" alt="Logo IER Las Malvinas" id="logo">
       <div class="brand-text">
-        <h1 style="margin:0; font-size:1.3rem;">IER Las Malvinas</h1>
-        <small style="color:rgba(255,255,255,0.8);">Formando estudiantes con valores y compromiso.</small>
+        <h1>IER Las Malvinas</h1>
+        <small>Formando estudiantes con valores y compromiso.</small>
       </div>
     </div>
     <nav id="site-nav" class="main-nav"></nav>
@@ -26,7 +26,7 @@
 
 <!-- HERO -->
 <section id="hero" class="hero">
-  <!-- La imagen de inicio se carga dinámicamente -->
+  <!-- Banner dinámico -->
 </section>
 
 <!-- SLIDER DE NOTICIAS -->
@@ -42,7 +42,7 @@
 <!-- FOOTER -->
 <footer class="site-footer">
   <div class="container">
-    <div class="footer-grid" style="display:flex; justify-content:space-between; gap:12px; flex-wrap:wrap;">
+    <div class="footer-grid">
       <div>
         <strong>IER Las Malvinas</strong>
         <p>Dirección • Teléfono • Correo</p>
